<resources>
    <string name="app_name">Conceptual Design</string>
    <string name="erase">C</string>
    <string name="erase_all">AC</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="sub">-</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="add">+</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="calc">=</string>
    <string name="point">.</string>
    <string name="digit_0">0</string>
    <string name="obr">(</string>
    <string name="cbr">)</string>
    <string name="mul">*</string>
    <string name="div">/</string>
</resources>
