<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <EditText
            android:id="@+id/calcScreen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/digit_0"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textIsSelectable="true"
            android:textSize="30sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TableLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="5">

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="4">

                    <Button
                        android:id="@+id/button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/div" />

                    <Button
                        android:id="@+id/button2"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/mul" />

                    <Button
                        android:id="@+id/button3"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="eraseAllCharacters"
                        android:text="@string/erase_all" />

                    <Button
                        android:id="@+id/button4"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="eraseLastCharacter"
                        android:text="@string/erase" />

                </TableRow>

                <TableRow
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="4">

                    <Button
                        android:id="@+id/button6"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/digit_7" />

                    <Button
                        android:id="@+id/button7"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/digit_8" />

                    <Button
                        android:id="@+id/button8"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/digit_9" />

                    <Button
                        android:id="@+id/button9"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/sub" />
                </TableRow>

                <TableRow
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="4">

                    <Button
                        android:id="@+id/button10"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/digit_4" />

                    <Button
                        android:id="@+id/button11"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/digit_5" />

                    <Button
                        android:id="@+id/button12"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/digit_6" />

                    <Button
                        android:id="@+id/button13"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/add" />
                </TableRow>

                <TableRow
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="4">

                    <Button
                        android:id="@+id/button14"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/digit_1" />

                    <Button
                        android:id="@+id/button15"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/digit_2" />

                    <Button
                        android:id="@+id/button16"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/digit_3" />

                    <Button
                        android:id="@+id/button17"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="calc"
                        android:text="@string/calc" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="4">

                    <Button
                        android:id="@+id/button23"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/point" />

                    <Button
                        android:id="@+id/button24"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/digit_0" />

                    <Button
                        android:id="@+id/button25"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/obr" />

                    <Button
                        android:id="@+id/button26"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="addCharacterToScreen"
                        android:text="@string/cbr" />
                </TableRow>
            </TableLayout>

        </FrameLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>